--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,8 @@
   src: url("/Minecraftia.ttf") format('truetype');
 }
 
+/* @import "./assets/base.css"; */
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
